# crisis-inbox

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.notebook  README.md  ROADMAP.md  __init__.py  client.py  debug_env.py  demo.py  drift_events.py  episodes.json  generate_episodes.py  messages.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sample_episodes.json
notebooks/: crisisinbox_grpo.ipynb  crisisinbox_grpo_northflank copy.ipynbx  crisisinbox_grpo_northflank.ipynb  crisisinbox_grpo_northflank.pynb  crisisinbox_grpo_simple.ipynb  crisisinbox_unsloth.ipynb
server/: Dockerfile  app.py  crisis_inbox_environment.py  demo_ui.py  rewards.py
tests/: test_environment.py  test_rewards.py
training/: crisisinbox_training.py
